--- a/master.yml
+++ b/master.yml
@@ -8,7 +8,7 @@
         force: no
 
     - name: initialize the cluster
-      command: kubeadm init --pod-network-cidr=10.244.0.0/16 &gt;&gt; cluster_initialized.txt
+      command: kubeadm init --pod-network-cidr=10.244.0.0/16
       args:
             chdir: $HOME
             creates: cluster_initialized.txt
